[tool.poetry]
name = "yandeximagesparser"
version = "0.1.0"
description = ""
authors = ["Andrey Shevtsov <vkitaebiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fake-headers = "^1.0.2"
bs4 = "^0.0.1"
pandas = "^2.0.3"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
